# ZeptoMC

./: .git-blame-ignore-revs  .gitignore  PLAN_OPTIMISATION.txt  README.md  picomc  pyproject.toml  test.sh  zeptomc
src/picomc/: colors.py  downloader.py  logging.py  msapi.py
src/picomc/mod/: curse.py
src/zeptomc/: __init__.py  __main__.py  account.py  config.py  downloader.py  errors.py  instance.py  launcher.py  library.py  logging.py  msapi.py  osinfo.py  rules.py  utils.py  version.py  windows.py  yggdrasil.py
src/zeptomc/cli/: __init__.py  account.py  config.py  install.py  instance.py  main.py  mod.py  play.py  utils.py  version.py
src/zeptomc/java/: __init__.py
src/zeptomc/mod/: curse.py  fabric.py  forge.py  ftb.py
