[project]
name = "zeptomc"
version = "0.5.1"
description = "A very small CLI Minecraft launcher."
authors = [
    { name = "Samuel Čavoj (picomc original)" },
    { name = "Marmotton" }
]
dependencies = [
    "click~=8.1",
    "requests~=2.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
zeptomc = "zeptomc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zeptomc"]

[tool.ruff.lint]
extend-select = ["I", "W"]